<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/height_middle_margin"
        android:layout_marginLeft="@dimen/middle_margin"
        android:layout_marginRight="@dimen/middle_margin"
        android:layout_marginTop="@dimen/larger_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/middle_margin"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:id="@+id/sheri"
            android:text="@string/app_name"
            android:textSize="@dimen/font_larger"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:layout_width="@dimen/sheri_line_width"
            android:layout_centerInParent="true"
            android:layout_height="@dimen/all_lines_height"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@color/colorOrange"
            android:id="@+id/line"
            android:layout_below="@+id/sheri"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/line_spacing_extra"
            android:layout_marginTop="@dimen/middle_margin"
            android:clickable="true"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:letterSpacing="@dimen/font_larger_spacing"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_marginEnd="@dimen/middle_margin"
            android:id="@+id/sheri_info"
            android:text="@string/sheri_info"
            android:textSize="@dimen/font_large"
            android:layout_below="@+id/line"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_margin"
            android:clickable="true"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:letterSpacing="@dimen/font_large_spacing"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            android:textSize="@dimen/font_large"
            android:id="@+id/questions"
            android:gravity="center"
            android:layout_above="@+id/email"
            android:text="@string/questions"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/email"
            android:autoLink="email"
            android:layout_marginBottom="@dimen/middle_margin"
            android:layout_marginTop="@dimen/low_middle_margin"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_height="wrap_content"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/font_large"
            android:text="@string/email"
            />
    </RelativeLayout>

</LinearLayout>