<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:coverflow="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/height_middle_margin"
        android:layout_marginLeft="@dimen/middle_margin"
        android:layout_marginRight="@dimen/middle_margin"
        android:layout_marginTop="@dimen/larger_margin"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/my_burger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:letterSpacing="@dimen/font_large_spacing"
                        android:textColor="@color/colorBlack"
                        android:text="@string/my_burger"
                        android:textSize="@dimen/font_large" />
                </ScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="top"
                    android:layout_gravity="top"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/colorGrey"
                    android:fontFamily="@font/open_sans"
                    android:letterSpacing="@dimen/font_largest_spacing"
                    android:text="@string/dish_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/general_dish_mark"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/little_margin"
                android:gravity="end"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/font_biggest_numeric" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/my_place"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:letterSpacing="@dimen/font_large_spacing"
                        android:textColor="@color/colorBlack"
                        android:layout_height="match_parent"
                        android:text="@string/my_place"
                        android:textSize="@dimen/font_large" />
                </ScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="top"
                    android:fontFamily="@font/open_sans"
                    android:letterSpacing="@dimen/font_largest_spacing"
                    android:textColor="@color/colorGrey"
                    android:layout_height="match_parent"
                    android:text="@string/place_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/general_place_mark"
                android:layout_width="match_parent"
                android:layout_weight="2.5"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/low_middle_margin"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="end|center_vertical"
                android:textSize="@dimen/font_big_numeric" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:letterSpacing="@dimen/font_large_spacing"
                    android:text="@string/general_mark"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_large" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="top"
                    android:fontFamily="@font/open_sans"
                    android:letterSpacing="@dimen/font_largest_spacing"
                    android:textColor="@color/colorGrey"
                    android:layout_height="match_parent"
                    android:text="@string/place_plus_place" />
            </LinearLayout>

            <TextView
                android:id="@+id/general_mark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.5"
                android:layout_marginBottom="@dimen/little_margin"
                android:textColor="@color/colorBlack"
                android:gravity="end|center_vertical"
                android:textSize="@dimen/font_big_numeric" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_weight="2">
            <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
                android:id="@+id/coverflow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                coverflow:coverHeight="@dimen/cover_flow_height"
                coverflow:coverWidth="@dimen/cover_flow_width"
                coverflow:reflectionGap="@dimen/reflection_gap"
                coverflow:maxScaleFactor="@dimen/max_scale_factor"
                coverflow:rotationThreshold="@dimen/rotation_threshold"
                coverflow:scalingThreshold="@dimen/scaling_threshold"
                coverflow:spacing="@dimen/spacing" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>